# DGSOL

./: CMakeLists.txt  LICENSE  README.md
src/blas/: CMakeLists.txt  Makefile
src/csrch/: CMakeLists.txt
src/dgsol_j/: dgsol.h  dgsol_seq_lib.c  dgsol_seq_lib.h  dgsolj_seq_test.cpp
src/dgsol_p/: CMakeLists.txt  dg.run  dgsol.c
src/dgsol_s/: CMakeLists.txt  dgsol.c
src/dgvmlm/: CMakeLists.txt  Makefile  dgerr.f  dginitial.f  dgopt.f
src/utils/: CMakeLists.txt
src/vmlm/: CMakeLists.txt
